# aoc-2025

./: .gitignore  README.md  dune-project
src/: day1.ml  day1_lexer.mll  day1_parser.mly  day2.ml  day2_lexer.mll  day2_parser.mly  day3.ml  day3_lexer.mll  day3_parser.mly  day4.ml  day4_lexer.mll  day4_parser.mly  day5.ml  day5_lexer.mll  day5_parser.mly  day6.ml  day6_lexer.mll  day6_parser.mly  day6_part2_lexer.mll  day6_part2_parser.mly  day7.ml  day7_lexer.mll  day7_parser.mly  day8.ml  day8_lexer.mll  day8_parser.mly  dune  parse.ml  parse.mli
