(library
 (name aoc)
 (libraries core)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(menhir
 (modules
  day1_parser
  day2_parser
  day3_parser
  day4_parser
  day5_parser
  day6_parser
  day6_part2_parser
  day7_parser))

(ocamllex
 (modules
  day1_lexer
  day2_lexer
  day3_lexer
  day4_lexer
  day5_lexer
  day6_lexer
  day6_part2_lexer
  day7_lexer))
